--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
 <div class = "content">
-	<img class = "img" src = "assets/tthvar.HEIC">
-	<h1 class = "h1"> Tejas Thvar </h1>
+	<h1 class = "h1"> Tejas Thvar | AUDFUTURE100 </h1>
 	<p class = "p1">
 		AI/ML Product Manager
 	</p>
@@ -21,35 +20,7 @@
 		UC Berkeley <a class = "b" href = "http://met.berkeley.edu"> M.E.T.</a> 2022
 	</p>
 	<br>
-	<h2 class = "h2"> Recent Experience </h2>
-	<ul class = "a">
-		<li class = "yahoo">
-			Product Manager <a href = 'https://yahooapms.com'>(APM Program Graduate)</a>, <a href = 'https://www.yahooinc.com/press/yahoo-mail-redesigns-the-inbox-for-a-cleaner-smarter-and-simpler-experience'>Yahoo Mail Intelligence</a>
-		</li>
-		<br>
-		<li class = "verkada">
-			Associate Product Manager, <a href = 'https://www.verkada.com/security-cameras/license-plate-recognition/'> Verkada </a>
-		</li>
-		<br>
-		<li class = "battery">
-			Analyst Extern, <a href = 'http://battery.com'> Battery Ventures </a>
-		</li>
-		<br>
-		<li class = "rise">
-			Undergraduate Researcher, <a href = 'https://rise.cs.berkeley.edu'>RISELab</a>
-		</li>
-		<br>
-		<li class = "vmware"> 
-			Product Intern,
-			<a href = 'https://www.vmware.com/products/workspace-one.html'>
-				VMware Workspace ONE 
-			</a>
-		</li>
-	</ul>
 	<p style="page-break-after: always;">&nbsp;</p>
-	<button class = "resumeButton" onclick = "window.open('assets/Thvar, Tejas.pdf')">
-		Resume
-	</button>
 	<button class = "musicButton" onclick = "window.open('https://open.spotify.com/artist/7AVwBWWzOKWkTRNA4HbuZI?si=SZ13nNoIRHCMKFcHvfFysg')">
 		My Music
 	</button>
